# seiya

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  STYLE.rst  build.py  pyproject.toml  requirements.txt  requirements_doc.txt  setup.py  tasks.py
docs/sphinx/: api.rst  conf.py  index.rst  intro.rst
docs/sphinx/_static/: custom.css
docs/sphinx/_templates/: layout.html
python/seiya/tests/: test_main.py
seiya/: __init__.py
seiya/core/: exceptions.py
seiya/cube/: __init__.py  cube.py  cubify.c  cubify.html  cubify.pyx
