[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12", "setuptools", "wheel", "numpy>=1.17.3", "cython>=0.29.13"]

[tool.poetry]
name = "seiya"
version = "0.1.0dev"
description = "A package for multi-object spectroscopic reductions"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/albireox/seiya"
repository = "https://github.com/albireox/seiya"
documentation = "https://seiya.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "seiya" }
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
cython = "^0.29.13"
pyyaml = "^5.1"
pygments = "^2.2.0"
astropy = "^3.2.1"

[tool.poetry.dev-dependencies]
ipython = "^7.9.0"
matplotlib = "^3.1.1"
invoke = "^1.3.0"
Sphinx = {version = "^2.2.1", extras = ["docs"]}
flake8 = {version = "^3.7.9", extras = ["docs"]}
sphinx_readable_theme = {version = "^1.3.0", extras = ["docs"]}
releases = {git = "https://github.com/albireox/releases.git", branch = "sphinx-version", extras=["docs"]}
doc8 = "^0.8.0"

[tool.isort]
line_length = 99
sections = ["FUTURE", "STDLIB", "NUMPY", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "seiya"
known_numpy = "numpy"
multi_line_output = 0
balanced_wrapping = true
include_trailing_comma = false
length_sort_stdlib = false
lines_after_imports = 2
# use_parentheses = true

[tool.flake8]
ignore = [
    "H101",
    "N",
    "W504",
]
max-line-length = 99
