[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.0b3"]

[tool.poetry]
name = "seiya"
version = "0.1.0dev"
description = "A package for multi-object spectroscopic reductions"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/albireox/seiya"
repository = "https://github.com/albireox/seiya"
documentation = "https://seiya.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "seiya" }
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17"
cython = "^0.29.13"
pyyaml = "^5.1"
pygments = "^2.2.0"
astropy = "^3.2.1"

# Docs extras. Need to be added to dependencies and not to dev-dependencies because otherwise
# they won't be installed on pip install .[docs]
# See https://github.com/sdispater/poetry/pull/606#issuecomment-437943927
# Need to do poetry install -E docs to actually install everything.
Sphinx = {version = "^2.2.1", optional = true}
releases = {git = "https://github.com/albireox/releases.git", branch = "sphinx-version", optional = true}
sphinx_readable_theme = {version = "^1.3.0", optional = true}

[tool.poetry.dev-dependencies]
ipython = "^7.9.0"
matplotlib = "^3.1.1"
invoke = "^1.3.0"
flake8 = "^3.7.9"
doc8 = "^0.8.0"
toml = "^0.10.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx_readable_theme", "releases"]

[tool.isort]
line_length = 99
sections = ["FUTURE", "STDLIB", "NUMPY", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "seiya"
known_numpy = "numpy"
multi_line_output = 0
balanced_wrapping = true
include_trailing_comma = false
length_sort_stdlib = false
lines_after_imports = 2
# use_parentheses = true

[tool.flake8]
ignore = [
    "H101",
    "N",
    "W504",
]
max-line-length = 99
